# stm32ai-modelzoo

./: .dockerignore  .gitignore  config.py  dataset  generic.ipynb  pyproject.toml  tof.ipynb  utils.py
common/docker/: .dockerignore
common/docker/train/: README.md  api.http  train.Dockerfile  train.entrypoint.py
hand_posture/getting_started/: README.md  stmaic_c_project.conf
hand_posture/getting_started/Application/NUCLEO-F401RE/STM32CubeIDE/: .cproject
hand_posture/scripts/deployment/: README.md  deploy.py  user_config.yaml
hand_posture/scripts/evaluate/: README.md  user_config.yaml
hand_posture/scripts/training/: README.md  user_config.yaml
hand_posture/scripts/utils/: datasets.py  utils.py
object_detection/getting_started/Application/STM32H747I-Discovery/STM32CubeIDE/CM7/: .cproject
object_detection/scripts/deployment/: deploy.py  user_config.yaml
object_detection/scripts/evaluate/: evaluate.py
object_detection/scripts/training/: train.py  user_config.yaml
object_detection/scripts/utils/: anchor_boxes_utils.py  callbacks.py  datasets.py  header_file_generator.py  load_models.py  loss.py  metrics_utils.py  quantization.py  utils.py
object_detection/scripts/utils/models/: SSD_MV1.py
object_detection/scripts/utils/object_det_metrics/lib/: BoundingBox.py  Evaluator.py
