[tool.poetry]
name = "vespucci-tof-demo"
version = "0.1.0"
description = "ToF backend demo"
authors = ["b.ventura <b.ventura@reply.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.25.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
ruff = "^0.0.292"
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
