[tool.poetry]
name = "modelzoo-train-generate-build"
version = "0.1.0"
description = "Modelzoo train/generate/build demonstration notebook"
authors = ["b.ventura <b.ventura@reply.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "*"
ipykernel = "*"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
ruff = "^0.0.292"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
